--- a/belajar-spring-config-properties/src/main/resources/application.properties
+++ b/belajar-spring-config-properties/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=belajar-spring-config-properties
 application.name=Belajar Spring Boot
+application.production-mode=false
+application.version=1.0.0
