add: spring-config-properties-completed

--- a/belajar-spring-config-properties/src/main/resources/application.properties
+++ b/belajar-spring-config-properties/src/main/resources/application.properties
@@ -1,4 +1,40 @@
-spring.application.name=belajar-spring-config-properties
-application.name=Belajar Spring Boot
-application.production-mode=false
-application.version=1
+#spring.application.name=belajar-spring-config-properties
+application.name=${APPLICATION_NAME:Belajar Spring Boot}
+application.production-mode=${APPLICATION_PRODUCTION_MODE:false}
+application.is-production=${APPLICATION_IS_PRODUCTION:false}
+application.version=${APPLICATION_VERSION:1}
+
+application.database.username=admin
+application.database.password=admin123
+application.database.url=jdbc:mysql://localhost:3306/belajar_spring_boot
+application.database.database=belajar_spring_boot
+
+# if you have list as properties, separate them with comma (,)
+# application.database.whitelist-tables=product, category, customer
+# or we can use indexing
+application.database.whitelist-tables[0]=products
+application.database.whitelist-tables[1]=categories
+application.database.whitelist-tables[2]=customers
+
+# if you have map as properties, propertiesname.{key}=value
+# as example, application.database.max-table-size(propertiesName).product(key)=1000(value)
+application.database.max-table-size.products=100
+application.database.max-table-size.categories=300
+application.database.max-table-size.customers=200
+
+application.default-roles[0].id=default
+application.default-roles[0].name=Default role
+application.default-roles[1].id=guest
+application.default-roles[1].name=Guest role
+
+application.roles.admin.id=admin
+application.roles.admin.name=Admin role
+application.roles.finance.id=finance
+application.roles.finance.name=Finance role
+
+application.default-timeout=10s
+application.expired-date=2010-10-10
+
+# if you want to activate more than one profile, separate them with comma (, production)
+spring.profiles.active=local, deployment, production
+profile.default=Default
