progress:entity-manager-factory

--- a/belajar-spring-data-jpa/src/main/resources/application.properties
+++ b/belajar-spring-data-jpa/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Belajar Spring Data JPA
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/belajar_spring_data_jpa
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=10
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
