--- a/belajar-spring-restful-api/src/main/resources/application.properties
+++ b/belajar-spring-restful-api/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Belajar Spring RESTful API
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/belajar_spring_restful_api
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=50
