progress:create-address-api

--- a/belajar-spring-data-jpa/docker-compose.yaml
+++ b/belajar-spring-data-jpa/docker-compose.yaml
@@ -13,4 +13,4 @@ services:
       - MYSQL_DATABASE=belajar_spring_data_jpa
     volumes:
       # - "C:/Users/LGSM036/Documents/udemy/docker-volume/belajar-spring-data-jpa:/var/lib/mysql"
-        - "/docker-volume:/var/lib/mysql"
+        - "./docker-volume:/var/lib/mysql"
