progress: belajar-spring-async:dynamic-executor

--- a/belajar-spring-async/src/main/resources/application.properties
+++ b/belajar-spring-async/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=Belajar Spring Async
+
+#### mengatur jumlah thread ####
+spring.task.execution.pool.core-size=20
+spring.task.execution.pool.max-size=50
+spring.task.execution.pool.queue-capacity=100
