progress:belajar-spring-async-done

--- a/belajar-spring-async/src/main/resources/application.properties
+++ b/belajar-spring-async/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.application.name=Belajar Spring Async
 spring.task.execution.pool.core-size=20
 spring.task.execution.pool.max-size=50
 spring.task.execution.pool.queue-capacity=100
+
+### mengatur thread pool untuk scheduler ###
+spring.task.scheduling.pool.size=10
+spring.task.scheduling.thread-name-prefix=my-scheduler-
