--- a/belajar-spring-monitoring/src/main/resources/application.properties
+++ b/belajar-spring-monitoring/src/main/resources/application.properties
@@ -1,1 +1,41 @@
 spring.application.name=Belajar Spring Monitoring
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=user
+spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spring-monitoring-db
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=50
+
+info.app=Belajar Spring Monitoring
+info.version=1.0.0
+info.author=Warungsederhana
+
+management.endpoints.web.exposure.include=beans, health, info, configprops, env, loggers, heapdump, threaddump, scheduledtasks, metrics
+
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+
+management.endpoint.beans.enabled=true
+
+management.endpoint.info.enabled=true
+management.info.env.enabled=true
+management.info.os.enabled=true
+management.info.java.enabled=true
+
+management.endpoint.configprops.enabled=true
+#management.endpoint.configprops.show-values=always
+
+management.endpoint.env.enabled=true
+#management.endpoint.env.show-values=always
+
+management.endpoint.loggers.enabled=true
+
+management.endpoint.heapdump.enabled=true
+
+management.endpoint.threaddump.enabled=true
+
+management.endpoint.scheduledtasks.enabled=true
+
+management.endpoint.metrics.enabled=true
